# scale-test

./: .env.example  .gitignore  README.md  docker-compose.yml  otel-collector-config.yaml  pyproject.toml  requirements.txt
docs/plans/: 2025-11-27-ai-observability-scale-test-design.md  2025-11-27-implementation-plan.md  2025-11-29-anthropic-message-format-design.md  2025-11-29-enhanced-realism-phase2.md
scripts/: analyze_collector_drops.sh  run_scale_test.py  verify_collector_setup.sh
src/: __init__.py  executor.py  instrumentation.py  metadata.py  metrics.py  payloads.py  platforms.py  scenarios.py  span_attributes.py  workflow.py
tests/: test_executor.py  test_instrumentation.py  test_integration.py  test_metrics.py  test_payloads.py  test_platforms.py  test_scenarios.py  test_workflow.py  test_workflow_execution.py
